@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: checkdoc.c,v 1.14 2005/06/28 22:37:31 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: checkdoc.c,v 1.15 2007/11/13 17:56:15 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - checkdoc.c */
@@ -149,6 +149,9 @@ process_line(char *line, FILE *b)
 	    break;		/* ignore */
 	}
     case '=':{			/* index entry */
+	    break;		/* ignore */
+	}
+    case 'F':{			/* included figure */
 	    break;		/* ignore */
 	}
     case '\n':			/* empty text line */
