@@ -1,3 +1,7 @@
+2007-11-13  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* docs/checkdoc.c:  Teach checkdoc to ignore embedded figures.
+
 2007-11-12  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/post.trm (PS_options PS_dump_prologue_file PS_open_prologue_file
